# UMRC

./: Cargo.toml  README.md
src/: main.rs
src/display/: cli.rs
src/jsons/: mod.rs
src/jsons/creates/: bt2jr.rs  bt2jt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs
src/jsons/deletes/: bt2jt.rs  jr2bt.rs  jt2jr.rs
src/jsons/moves/: bt2jt.rs  jt2bt.rs  jt2jr.rs  mod.rs
src/jsons/renames/: bt2jt.rs  jr2bt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs
src/jsons/textures/: mod.rs  terrain.rs
src/manipulation/: convert.rs  file_manipulation.rs  json.rs  mod.rs  move_files.rs  zip.rs
umrc/: Cargo.toml
umrc/src/: main.rs
umrc/src/display/: cli.rs  mod.rs
umrc/src/jsons/creates/: bt2jr.rs  bt2jt.rs  jr2bt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs  mod.rs
umrc/src/jsons/deletes/: bt2jr.rs  bt2jt.rs  jr2bt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs
umrc/src/jsons/moves/: bt2jr.rs  bt2jt.rs  jr2bt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs
umrc/src/jsons/renames/: bt2jr.rs  bt2jt.rs  jr2bt.rs  jr2jt.rs  jt2bt.rs  jt2jr.rs
umrc/src/manipulation/: convert.rs  file_manipulation.rs  json.rs  mod.rs  zip.rs
