[package]
name = "umrc"
version = "0.1.0"
authors = ["BJTMastermind <bjtmastermind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
image = "0.23.14"
json = "0.12.4"
zip = "0.5.11"
zip-extensions = "0.6.0"
uuid = {version = "0.8.2", features = ["v4"]}
